hphp/test/slow/parser/hh-reserved-name-real-1.php.expectf
Fatal error: Cannot use 'Real' as class name as it is reserved in %s on line 3
